# tdd-solve

./: README.md  pyproject.toml
.github/workflows/: main.yml  tdd-solve-test.yaml
tdd_solve/: solve.py
tests/: test_solve.py
tests/.github/workflows/: tdd-solve-test.yaml
