[tool.poetry]
name = "tdd-solve"
version = "0.1.0"
description = "Solve quadratic equation esion."
authors = ["None"]
readme = "README.md"
packages = [{include = "tdd_solve"}]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.1.3"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
black = "^22.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
